backup/manifest/stg/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: hi-dev-service
    namespace: stg 
  spec:
    clusterIP: 10.111.22.58
    clusterIPs:
    - 10.111.22.58
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: hi-dev
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
